bye commons